@@ -48,7 +48,6 @@ MODULE_OBJS := \
 	tinygl/zline.o \
 	tinygl/zmath.o \
 	tinygl/ztriangle.o \
-	tinygl/ztriangle_shadow.o
 
 ifdef USE_SCALERS
 MODULE_OBJS += \
