@@ -8,9 +8,9 @@ namespace TinyGL {
 template <bool interpRGB, bool interpZ>
 FORCEINLINE static void putPixel(PIXEL *pp, const Graphics::PixelFormat &cmode, unsigned int *pz, unsigned int &z, int &color, unsigned int &r, unsigned int &g, unsigned int &b) {
 	if (interpZ) {
-		if (ZCMP(z,*pz)) {
+		if (ZCMP(z, *pz)) {
 			if (interpRGB) {
-				*pp = RGB_TO_PIXEL(r >> 8,g >> 8,b >> 8);
+				*pp = RGB_TO_PIXEL(r >> 8, g >> 8, b >> 8);
 			}
 			else {
 				*pp = color;
@@ -20,7 +20,7 @@ FORCEINLINE static void putPixel(PIXEL *pp, const Graphics::PixelFormat &cmode, 
 	}
 	else {
 		if (interpRGB) {
-			*pp = RGB_TO_PIXEL(r >> 8,g >> 8,b >> 8);
+			*pp = RGB_TO_PIXEL(r >> 8, g >> 8, b >> 8);
 		}
 		else {
 			*pp = color;
@@ -47,7 +47,7 @@ FORCEINLINE static void drawLine(ZBufferPoint *p1, ZBufferPoint *p2, PIXEL *pp, 
 	int pp_inc_1 = (inc_1) * PSZB;
 	int pp_inc_2 = (inc_2) * PSZB;
 	do {
-		putPixel<interpRGB,interpZ>(pp, cmode, pz, z, color, r, g, b);
+		putPixel<interpRGB, interpZ>(pp, cmode, pz, z, color, r, g, b);
 		if (interpZ) {
 			z += zinc;
 		}
@@ -87,7 +87,7 @@ void FrameBuffer::fillLine(ZBufferPoint *p1, ZBufferPoint *p2, int color) {
 		p2 = tmp;
 	}
 	sx = xsize;
-	pp = (PIXEL *)((char *) pbuf.getRawBuffer() + linesize * p1->y + p1->x * PSZB);
+	pp = (PIXEL *)((char *)pbuf.getRawBuffer() + linesize * p1->y + p1->x * PSZB);
 	if (interpZ) {
 		pz = zbuf + (p1->y * sx + p1->x);
 		z = p1->z;
@@ -104,16 +104,16 @@ void FrameBuffer::fillLine(ZBufferPoint *p1, ZBufferPoint *p2, int color) {
 		putPixel<interpRGB,interpZ>(pp, cmode, pz, z, color, r, g, b);
 	} else if (dx > 0) {
 		if (dx >= dy) {
-			drawLine<interpRGB,interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx + 1, 1);
+			drawLine<interpRGB, interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx + 1, 1);
 		} else {
-			drawLine<interpRGB,interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx + 1, sx);
+			drawLine<interpRGB, interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx + 1, sx);
 		}
 	} else {
 		dx = -dx;
 		if (dx >= dy) {
-			drawLine<interpRGB,interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx - 1, -1);
+			drawLine<interpRGB, interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx - 1, -1);
 		} else {
-			drawLine<interpRGB,interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx - 1, sx);
+			drawLine<interpRGB, interpZ>(p1, p2, pp, cmode, pz, z, color, r, g, b, dx, dy, sx - 1, sx);
 		}
 	}
 }
@@ -127,11 +127,11 @@ void FrameBuffer::plot(ZBufferPoint *p) {
 	unsigned int r, g, b;
 	int col = RGB_TO_PIXEL(p->r, p->g, p->b);
 	unsigned int z = p->z;
-	putPixel<false,true>(pp, cmode, pz, z, col, r, g, b);
+	putPixel<false, true>(pp, cmode, pz, z, col, r, g, b);
 }
 
 void FrameBuffer::fillLineFlatZ(ZBufferPoint *p1, ZBufferPoint *p2, int color) {
-#include "graphics/tinygl/zline.h"
+	fillLine<false, true>(p1, p2, color);
 }
 
 // line with color interpolation
@@ -141,11 +141,11 @@ void FrameBuffer::fillLineInterpZ(ZBufferPoint *p1, ZBufferPoint *p2) {
 
 // no Z interpolation
 void FrameBuffer::fillLineFlat(ZBufferPoint *p1, ZBufferPoint *p2, int color) {
-	fillLine<false, true>(p1, p2, color);
+	fillLine<false, false>(p1, p2, color);
 }
 
 void FrameBuffer::fillLineInterp(ZBufferPoint *p1, ZBufferPoint *p2) {
-	fillLine<true, false>(p1, p2, 0);
+	fillLine<false, true>(p1, p2, 0);
 }
 
 void FrameBuffer::fillLineZ(ZBufferPoint *p1, ZBufferPoint *p2) {
